css/main.css
/*COLORS*/

:root {
    --button-active-translate: translateY(2px);

    --hover-opacity: 0.6;

    --primary-color: #121212;

    --light-color: #ffffff;
    
    --main-text-color: #4A4A4A;
}

::selection {
    color: var(--light-color);

    background: var(--primary-color);

}


/*Main settings*/

body,
html {
    height: 100%;
    position: relative;

    background-color: var(--light-color);
    color: var(--main-text-color);

    font-size: 80%;

    font-family: 'Raleway', sans-serif;
}

.nopadding {
    padding: 0 !important;
    margin: 0 !important;
}

.hide-element {
    visibility: hidden;
}

h1 {
    /*    font-weight: 500;*/
}

section {
    padding: 4rem 0 4rem 0 !important;
}

.minHeight {
    min-height: 100vh !important;
}

#new-page{
    background-color: var(--primary-color) !important;
    color: var(--light-color);
}


.hide-element {
    visibility: hidden;
}


/*Loading screen*/
.load-screen {
    background-color: var(--light-color);

    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;

    z-index: 99;
}

#loadingBar {
    width: 20% !important;
    /*    height: 50% !important;*/
    margin: auto;
}

.loading-bar .ldBar-label {
    padding-top: 10px;
    display: block;
/*    color: var(--light-color);*/
/*    text-shadow: 0 0 white !important;*/
/*    opacity: 0.6;*/
}

/*navbar logo*/

.logo-full {
    transition: all 0.3s ease-in-out;
    max-height: 3.8rem;
    opacity: 0.8;
}

.logo-full-smaller {
    transform: scale(0.7);
}

/*Navbar*/

.navbar {
    background-color: white;
    z-index: 9;
    padding-top: 1.5rem;
    padding-bottom: 1.5rem;
    transition: all 0.3s ease-in-out;
}

.navbar-small {
    padding-top: 0rem;
    padding-bottom: 0rem;

    background-color: var(--light-color) !important;

    /*
    border-bottom: 1px solid var(--primary-color);
*/
    box-shadow: 0px 1px #00000040;
}


.nav-link {
    color: var(--main-text-color);
    /*    text-transform: uppercase;*/
    letter-spacing: 3px;

    transition: all 0.2s ease-in-out;

    font-size: 1rem;

    padding: 0 2px;
}

.nav-link:hover {
    color: var(--main-text-color);

    opacity: var(--hover-opacity);
}

.nav-link-main:hover {
    color: var(--main-text-color);
    
    transform: translateY(-3px);

/*    opacity: 1;*/
    opacity: var(--hover-opacity);
}

.nav-link-active:hover {
    color: black !important;
}


/*navlink active*/

.active {
    color: black;
    transform: translateY(-3px);
    font-weight: 500;
    transition: all 0.2s ease-in-out;
}

.active:hover {
    color: var(--light-color);
}

#faButton {
    font-size: 1.8rem;
    color: black;
}

.navbar-toggler {
    padding: 0;
    transition: opacity 0.2s ease-in-out;

}

.navbar-toggler:active {
    transform: var(--button-active-translate);
}

.navbar-toggler:hover {
    opacity: var(--hover-opacity);
}


.navbar-toggler:focus {
    outline: none;
}


/*MODAL*/
.carousel-control-prev-icon {
    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%2350f' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E");
}

.carousel-control-next-icon {
    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%2350f' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E");
}

/*Main text*/
.main-text-header {
    font-size: 3.4rem;
    font-family: 'Playfair Display', serif;
}

.main-text-subheader {
    font-size: 3.2rem;
    font-family: 'Roboto', sans-serif;
}

.main-text-paragraph {
    font-size: 1.4rem;
    font-family: 'Playfair Display', serif;
}

/*Portfolio*/

.portfolio-square {
    z-index: 0;
}

.portfolio-square img {
    min-height: 100%;
    min-width: 100%;
}


.portfolio-title {
    width: 19rem;
    height: 5rem;
    color: var(--light-color);
    border-bottom-left-radius: 0.5rem;
    border-bottom-right-radius: 0.5rem;
}

.portfolio-hidden {
    z-index: 3;
    position: absolute;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);

}

.portfolio-hidden a:hover img {
    opacity: var(--hover-opacity);
}

.portfolio-hidden a:active img {
    transform: var(--button-active-translate);
}


.portfolio-img {
    z-index: -1;
    transition: all 0.3s ease-in-out;
}

.portfolio-img:hover {
    transform: scale(0.98);
    opacity: 0.8;
}

.portfolio-scale {
    transform: scale(1.2);
}

/*portfolio gallery*/

/*.nGY2Icon-ellipsis-vert {*/
/*    display: none !important;*/
/*}*/

#gallery {
    padding-top: 100px !important;
}

.rotateLeftButton {
    display: none !important;
}

.rotateRightButton {
    display: none !important;
}

/*MODAL*/
.modal-content {
    border: 1px solid var(--light-color);
    border-radius: 6px;
}

.modal-title {
    margin: 0 auto;
    color: var(--primary-color);
}

.modal-header {
    border-bottom: 0;
}

.modal-footer {
    border-top: 0;
}

.modal-header,
.modal-body,
.modal-footer {
    background-color: var(--light-color);
}

.btn {
    background-color: var(--primary-color);
    color: var(--light-color);
    transition: all 0.2s ease-in-out;
    border: 1px solid var(--primary-color);
    border-radius: 6px;
    margin: auto;
}

.btn:hover {
    background-color: var(--primary-color);
    opacity: var(--hover-opacity);
    border: 1px solid var(--primary-color);
    border-radius: 6px;
}

.btn:active {
    transform: var(--button-active-translate);
    outline: none;
}

/*
.carousel-item{
    width: 80%;
    height: auto;
}
*/


/*Contact*/

.emailLink {
    color: var(--main-text-color);
    transition: all 0.2s ease-in-out;
}

.emailLink:hover {
    text-decoration: none;
    opacity: var(--hover-opacity);
    color: var(--main-text-color);
}

.emailLink:active {
    transform: var(--button-active-translate);
}

.box {
    background: #DCDCDC;
}

.circle {
    width: 75px;
    height: 75px;
    border-radius: 50%;
    position: relative;
    margin-bottom: 1rem;
}

.circle h2 {
    margin: 0;
    position: absolute;
    top: 45%;
    left: 50%;
    transform: translate(-50%, -50%);
}

.circle-dark-gray {
    background: #DCDCDC;
}

.circle-gray {
    background: #C0C0C0;
}

.circle-light-gray {
    background: #A9A9A9;
}

/*footer*/

footer p {
    font-size: 0.8rem;
}

/*Queries*/

/*
@media (max-width: 576px) {
    .ldBar {
        width: 40% !important;
        height: 40% !important;
    }
    
    .skill-icon{
        margin: auto;
        
    }
}
*/

@media (min-width: 576px) {

    body,
    html {


        font-size: 85%;

    }

    .ldBar {
        width: 50% !important;
        height: 50% !important;
    }

    .skill-icon {
        width: 100px;
        height: auto;
        top: 21%;
    }
}

@media (min-width: 768px) {
    .ldBar {
        width: 55% !important;
        height: 55% !important;
    }

    .skill-icon {
        width: 95px;
        height: auto;
        top: 20%;
    }

}

@media (max-width: 768px) {
    .container {
        min-width: 100%;
    }

    .navbar-nav:last-child {
        padding-bottom: 1rem;
    }

}

@media (min-width: 992px) {

    body,
    html {


        font-size: 90%;

    }
}

@media (min-width: 1200px) {

    body,
    html {
        font-size: 95%;

    }

    .skill-icon {
        top: 21%;
    }
}

@media (min-width: 1440px) {

    body,
    html {


        font-size: 100%;

    }
}

/*CSS HOVER*/

/*http://ianlunn.github.io/Hover/*/

/* Shutter Out Vertical 


.hvr-shutter-out-vertical {
    display: inline-block;
    vertical-align: middle;
    -webkit-transform: perspective(1px) translateZ(0);
    transform: perspective(1px) translateZ(0);
    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
    position: relative;
        background: #e1e1e1;
    -webkit-transition-property: color;
    transition-property: color;
    -webkit-transition-duration: 0.3s;
    transition-duration: 0.3s;

    background-image: url("../photos/tlo.png");
    background-image: url("../photos/tlo2.png");
    background-image: url("../photos/tlo3.png");

    background-size: cover;
}

.hvr-shutter-out-vertical:before {
    content: "";
    position: absolute;
    z-index: 1;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    background: rgba(156, 65, 65, 0.9);
    background: rgba(0, 0, 0, 0.8);


    -webkit-transform: scaleY(0);
    transform: scaleY(0);
    -webkit-transform-origin: 50%;
    transform-origin: 50%;
    -webkit-transition-property: transform;
    transition-property: transform;
    -webkit-transition-duration: 0.3s;
    transition-duration: 0.3s;
    -webkit-transition-timing-function: ease-out;
    transition-timing-function: ease-out;

}

.hvr-shutter-out-vertical:hover,
.hvr-shutter-out-vertical:focus,
.hvr-shutter-out-vertical:active {
    color: var(--light-color);
}

.hvr-shutter-out-vertical:hover:before,
.hvr-shutter-out-vertical:focus:before,
.hvr-shutter-out-vertical:active:before {
    -webkit-transform: scaleY(1);
    transform: scaleY(1);
}

*/

